--- a/www/css/style.css
+++ b/www/css/style.css
@@ -15,6 +15,7 @@ body {}
 	width: 30%;
 }
 
+
 .page.index .no_btn {
 	width: 30%;
 }
@@ -32,7 +33,7 @@ body {}
 }
 
 .page.home img {
-	border: 1px solid green;
+	
 }
 
 
@@ -57,6 +58,173 @@ body {}
 .page.header .text .glyphicon {
 	font-size: 11px;
 }
+
+
+
+
+
+
+
+/*////////////////////			page menu 			////////////////////*/
+.page.menu .Color_1 {
+	background: #90B4ED;
+	height: 120px;
+	text-align: center;  
+}
+
+.page.menu .Color_1 .glyphicon {
+	font-size: 60px;
+	color: #FFF;
+	margin-top: 15px;
+	padding-right: 13px;
+}
+
+.page.menu .Color_1 p {
+	font-size: 20px;
+	font-family: bold;
+	color: #FFF;
+}
+
+.page.menu .Color_2 {
+	background: #7280D3;
+	height: 120px;
+	text-align: center;  
+}
+
+.page.menu .Color_2 .glyphicon {
+	font-size: 60px;
+	color: #FFF;
+	margin-top: 15px;
+	padding-right: 5px;
+}
+
+.page.menu .Color_2 p {
+	font-size: 20px;
+	font-family: bold;
+	color: #FFF;
+}
+
+.page.menu .Color_3 {
+	background: #7A35A8;
+	height: 120px;
+	text-align: center;  
+}
+
+.page.menu .Color_3 .glyphicon {
+	font-size: 60px;
+	color: #FFF;
+	margin-top: 15px;
+	padding-right: 5px;
+}
+
+.page.menu .Color_3 p {
+	font-size: 20px;
+	font-family: bold;
+	color: #FFF;
+}
+
+.page.menu .Color_4 {
+	background: #258986;
+	height: 120px;
+	text-align: center;  
+}
+
+.page.menu .Color_4 .glyphicon {
+	font-size: 60px;
+	color: #FFF;
+	margin-top: 15px;
+	padding-right: 5px;
+}
+
+.page.menu .Color_4 p {
+	font-size: 20px;
+	font-family: bold;
+	color: #FFF;
+}
+
+
+
+
+/*////////////////////			page my heart 			////////////////////*/
+.page.my_heart .header .glyphicon {
+	font-size: 60px;
+	color: #FFF;
+	margin-top: 30px;
+}
+
+.page.my_heart .header p {
+	color: #FFF;
+	font-size: 20px;
+}
+
+.page.my_heart .text {
+	color: #FFF;
+}
+
+
+
+
+
+
+/*////////////////////			page for life 			////////////////////*/
+.page.for_life .header {
+	color: #FFF;
+	font-size: 20px;
+	margin-top: 30px;
+}
+
+.page.for_life .border_style p {
+	color: #FFF;
+	font-family: bold;
+	padding-right: 20px;
+	margin-top: 20px;
+}
+
+.page.for_life .border_style table {
+	color: #FFF;
+	border: 2px solid gray;
+	font-size: 12px;
+}
+
+.page.for_life .border_style table td {
+	padding-left: 10px;
+}
+
+
+
+
+
+
+
+
+/*////////////////////			page setting 			////////////////////*/
+.page.setting {
+	color: #FFF;
+}
+
+.page.setting p	{
+	color: #FFF;
+	font-size
+}
+
+.page.setting table	{
+	color: #FFF;
+	font-size: 12px;
+}
+
+.page.setting table td {
+	padding-left: 10px;
+}
+
+
+  
+
+
+
+
+
+
+
 
 
 
